--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,6 @@
 <div>
   <button>
-    <img src="" alt="" />
+    <img [src]="'assets/users/' + selectedUser.avatar" alt="selectedUser.name" />
     <span>{{selectedUser.name}}</span>
   </button>
 </div>
