--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,20 +2,17 @@
 
 <main>
   <ul id="users">
-    <!-- @for (user of users; track user.id) { -->
+    @for (user of users; track user.id) {
 
-    <li *ngFor="let user of users">
+    <li>
       <app-user [user]="user" (select)="onSelectUser($event)" />
     </li>
-    <!-- } -->
+    }
   </ul>
 
-  <!-- @if (selectedUser) { -->
-  <app-tasks *ngIf="selectedUser; else fallback " [name]="selectedUser!.name" />
-  <!-- } @else { -->
-    <ng-template #fallback>
-        <p id="fallback">Select a user to see their tasks!</p>
-    </ng-template>
-
-  <!-- } -->
+  @if (selectedUser) {
+  <app-tasks [userId]="selectedUser.id" [name]="selectedUser!.name" />
+  } @else {
+  <p id="fallback">Select a user to see their tasks!</p>
+  }
 </main>
